--- a/Ejercicio.html
+++ b/Ejercicio.html
@@ -76,6 +76,6 @@
             </div>
             <div class="form-check">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </div>
